; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_g_game.c_G_TimeDemo.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_g_game.c_G_TimeDemo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"-nodraw\00", align 1
@nodrawers = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [8 x i8] c"-noblit\00", align 1
@noblit = common dso_local global i8* null, align 8
@timingdemo = common dso_local global i32 0, align 4
@singletics = common dso_local global i32 0, align 4
@defdemoname = common dso_local global i8* null, align 8
@ga_playdemo = common dso_local global i32 0, align 4
@gameaction = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @G_TimeDemo(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i8* @M_CheckParm(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %3, i8** @nodrawers, align 8
  %4 = call i8* @M_CheckParm(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  store i8* %4, i8** @noblit, align 8
  store i32 1, i32* @timingdemo, align 4
  store i32 1, i32* @singletics, align 4
  %5 = load i8*, i8** %2, align 8
  store i8* %5, i8** @defdemoname, align 8
  %6 = load i32, i32* @ga_playdemo, align 4
  store i32 %6, i32* @gameaction, align 4
  ret void
}

declare dso_local i8* @M_CheckParm(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
